<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/series" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/edit_series_name"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/series"
                            android:inputType="textCapWords" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/colour" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <!-- Name field -->
                        <EditText
                            android:id="@+id/edit_colour"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/colour"
                            android:inputType="textCapWords" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/alpacasso_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/alpacassobg" />

                <ImageView
                    android:id="@+id/camera_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignBottom="@id/alpacasso_image"
                    android:layout_alignRight="@id/alpacasso_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_camera" />

            </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/size" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_size"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:layout_marginBottom="16dp"
                android:text="@string/in_stock" />


            <RadioGroup
                android:id="@+id/stock_boolean"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/in_stock"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/out_of_stock"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/number_stock" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/minus_button"
                    style="@style/EditorPlusMinusStyle"
                    android:text="-" />

                <EditText
                    android:id="@+id/edit_number_stock"
                    style="@style/EditorFieldStyleStock"
                    android:hint="@string/number_stock"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/plus_button"
                    style="@style/EditorPlusMinusStyle"
                    android:text="+" />

                <Button
                    android:id="@+id/sale_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sale"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restock_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/restock" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/restock"
                    style="@style/EditorFieldStyleStock"
                    android:layout_weight="2"
                    android:hint="@string/restock"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/restock_button"
                    style="@style/EditorButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stocked"
                    android:textAllCaps="true" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/price" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/price_unit" />

                <EditText
                    android:id="@+id/edit_price"
                    style="@style/EditorFieldStyle"
                    android:layout_toRightOf="@+id/label_price_units"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />


            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>