<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_series_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/normalTextColor"
            android:textStyle="bold"
            tools:text="Kids Alpacasso" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/subColor"
                tools:text="Small" />

            <TextView
                android:id="@+id/item_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/subColor"
                tools:text="Yellow" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/price_unit"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/normalTextColor" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/normalTextColor"
                tools:text="7.00" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/subColor"
                tools:text="21" />

            <TextView
                android:id="@+id/item_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/subColor"
                tools:text="@string/in_stock_display" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:focusable="false"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:text="@string/sale_button" />


</LinearLayout>